--- a/config.yml
+++ b/config.yml
@@ -10,6 +10,10 @@ cockroach_local:
   port: '26257'
   password: ''
 
+ignite_local:
+  host: 'localhost'
+  port: 10800
+
 mongo_local:
   url: 'localhost:27017'
 
